# drtvam

./: .gitignore  .gitmodules  .readthedocs.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: wheels.yml
docs/: requirements.txt
docs/src/: basic_usage.rst  conf.py  forward_projection.rst  index.rst  plugin_doc.rst  projector_calibration.rst  real_world_example.rst  release.rst  release_notes.rst  tutorials.rst
docs/src/plugin_reference/: container.rst  integrator.rst  loss.rst  optimizer.rst  projector.rst  sensor.rst
docs/src/resources/: example_config.json
src/drtvam/: __init__.py  film.py  geometry.py  lbfgs.py  loss.py  motion.py  optimize.py  projector.py  sensor.py  utils.py
src/drtvam/integrators/: __init__.py  common.py  filter_corner.py  radon.py  volume.py
tests/: delta_phase.py  test_integrators.py  test_loss.py  test_optimization.py  test_projector.py  test_sensor.py  test_utils.py
tests/files/: box_hole.ply  box_hole_custom_cuvette.json  box_hole_cylindrical.json  box_hole_index_matched.json  box_hole_occlusion.json  box_hole_occlusion_filter_radon.json  box_hole_scattering.json  box_hole_square.json  box_hole_square_different_thresholds.json  box_hole_square_sparsity_loss.json  box_hole_square_weighted_loss.json  cuvette_inner.ply  cuvette_outer.ply  double_cylindrical.json  hollow_gear.ply  occlusion.ply  opt_config.json  target_hollow_gear.npy
