[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "drtvam"
version = "0.2.0"
authors = [
  { name="Baptiste Nicolet", email="baptiste.nicolet@epfl.ch" },
  { name="Felix Wechsler", email="fxw+git@epfl.ch" },
]
description = "An inverse rendering framework for tomographic volumetric additive manufacturing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mitsuba>=3.6.4",
    "numpy",
    "tqdm",
    "matplotlib"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rgl-epfl/drtvam"
Issues = "https://github.com/rgl-epfl/drtvam/issues"

[project.scripts]
drtvam = "drtvam.optimize:main"

#[tool.pytest.ini_options]
#pythonpath = [
#  "."
#]
